--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "super",
   "version": "0.1.0",
-  "homepage": "https://Acid1738.github.io",
+  "homepage": "https://acid1738.github.io/Dubstep/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
