--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,13 @@
   "icons": [
 
     {
-      "src": "192.png",
+      "src": "/src/Icon/192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
 
     {
-      "src": "512.png",
+      "src": "/src/Icon/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
