--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,16 @@
 {
-  "short_name": "Grimoire",
-  "name": "Grimoire: Book of Anime ",
+  "short_name": "AniList",
+  "name": "Anime List ",
   "icons": [
 
     {
-      "src": "/src/Icon/192.png",
+      "src": "./192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
 
     {
-      "src": "/src/Icon/512.png",
+      "src": "./512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -20,7 +20,7 @@
   "display": "standalone",
   "theme_color": "#121212",
   "background_color": "#000000",
-  "description" : "fuck you",
+  "description" : "Keep A Record of All Anime You Have Watched",
   "orientation" : "portrait-primary"
 }                       
 
