--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,52 @@
   "icons": [
 
     {
-      "src": "./192.png",
+      "src": "/public/Icon/72.svg",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/96.svg",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/128.svg",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/144.svg",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/152.svg",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/192.svg",
       "sizes": "192x192",
       "type": "image/png"
     },
 
     {
-      "src": "./512.png",
+      "src": "/public/Icon/384.svg",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+
+    {
+      "src": "/public/Icon/512.svg",
       "sizes": "512x512",
       "type": "image/png"
     }
-
   ],
   "start_url": ".                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ",
   "display": "standalone",
