--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,62 +1,62 @@
 {
   "short_name": "AniList",
-  "name": "Anime List ",
+  "name": "AnimeList",
   "icons": [
-
     {
       "src": "/Dubstep/Icon/72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
-
     {
       "src": "/Dubstep/Icon/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": ".                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ",
+  "start_url": "https://acid1738.github.io/Dubstep/                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ",
   "display": "standalone",
   "theme_color": "#121212",
   "background_color": "#000000",
-  "description" : "Keep A Record of All Anime You Have Watched",
-  "orientation" : "portrait-primary"
-}                       
-
-
+  "description": "Keep A Record of All Anime You Have Watched",
+  "orientation": "portrait-primary",
+  "dir": "auto",
+  "lang": "en",
+  "iarc_rating_id": "3+",
+  "prefer_related_applications": false,
+  "categories": [
+    "entertainment"
+  ],
+  "edge_side_panel": {
+    "preferred_width": 200
+  }
+}
